# insurance-severity

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark.py  benchmark_evt.py  run_benchmark_databricks.py
notebooks/: benchmark.py  benchmark_evt.py  benchmark_heavy_tail.py  debug_cmrs.py  demo_insurance_severity.py  demo_mdn.py  demo_reserving_aipw.py  demo_spqrx.py  run_cmrs_tests.py  run_coverage_expansion_tests.py  run_evt_tests_job.py  run_mdn_tests.py  run_projection_tests_job.py  run_spqrx_tests.py  test_evt_inline.py  test_evt_runner.py  test_projection_runner.py  test_runner.py  test_tail_scoring_runner.py
src/insurance_severity/: __init__.py  cmrs.py  evt.py  projection.py  reserving.py  tail_scoring.py
src/insurance_severity/composite/: __init__.py  diagnostics.py  distributions.py  models.py  regression.py
src/insurance_severity/drn/: __init__.py  baseline.py  catboost_baseline.py  cutpoints.py  diagnostics.py  drn.py  histogram.py  loss.py  network.py
src/insurance_severity/evt/: __init__.py  censored_hill.py  diagnostics.py  tempered_pareto.py  truncated_gpd.py
src/insurance_severity/mdn/: __init__.py  distribution.py  loss.py  mdn.py  network.py
src/insurance_severity/spqrx/: __init__.py  distribution.py  network.py  spqrx.py
tests/: conftest.py  test_cmrs.py  test_coverage_expansion_apr2026.py  test_drn_tail_scoring.py  test_evt.py  test_mdn.py  test_new_coverage.py  test_p0_regressions.py  test_projection.py  test_reserving.py  test_spqrx.py  test_tail_scoring.py  test_tail_scoring_plots.py
tests/composite/: test_diagnostics.py  test_distributions.py  test_models.py  test_regression.py
tests/drn/: test_baseline.py  test_cutpoints.py  test_diagnostics.py  test_drn.py  test_histogram.py  test_loss.py  test_network.py
tests/evt/: test_censored_hill.py  test_tempered_pareto.py  test_truncated_gpd.py
