[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-severity"
version = "0.1.0"
description = "Insurance severity modelling: composite (spliced) models and Distributional Refinement Networks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Burning Cost", email = "pricing.frontier@gmail.com"}
]
keywords = [
    "insurance",
    "actuarial",
    "severity",
    "composite",
    "spliced",
    "regression",
    "EVT",
    "distributional-forecasting",
    "neural-network",
    "drn",
    "glm",
    "gamma",
    "solvency-ii",
    "histogram",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
glm = [
    "statsmodels>=0.14.0",
]
catboost = [
    "catboost>=1.2.0",
]
plotting = [
    "matplotlib>=3.7",
]
formulas = [
    "patsy>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7",
]
all = [
    "statsmodels>=0.14.0",
    "catboost>=1.2.0",
    "matplotlib>=3.7",
    "patsy>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_severity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "statsmodels>=0.14.6",
]
